omni/tests/goldens/types/undefined_ident_12.err
tests/goldens/types/undefined_ident_12.omni:1:20: error: undefined identifier "missing12"
     1 | let result12:int = missing12
       |                    ^^^^^^^^^
     2 | 
  hint: declare the variable with 'let missing12: <type> = <value>' or 'var missing12: <type> = <value>' before using it
