omni/tests/goldens/types/undefined_ident_12.omni
let result12:int = missing12
